<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="starling_capture">Starling Capture</string>
    <string name="placeholder">Placeholder</string>
    <string name="power_by">Power By</string>
    <string name="secure">Secure</string>
    <string name="message_general_error">Oh no! Bad things happened!</string>
    <string name="connect_to_ipfs">Connecting to IPFS…</string>
    <string name="create_wallet">Creating Textile wallet…</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_video">Capture Video</string>
    <string name="dismiss">Dismiss</string>
    <string name="message_external_dir_unavailable">External directory unavailable. Save media to internal directory instead.</string>

    <string name="tour">Tour</string>
    <string name="set_user_name">Set User Name</string>
    <string name="message_set_user_name">Set your user name for Textile profile. You can always change your user name in the setting screen. Note that your profile ID does not relate to your user name.</string>
    <string name="enable_zion_support">Enable Zion Support</string>
    <string name="zion_enabled">Zion Enabled</string>
    <string name="zion_disabled">Zion Disabled</string>
    <string name="start">Start</string>
    <string name="message_end_page">All set!\n Click the start button below to start using MediAnt!</string>

    <string name="feeds">Feeds</string>
    <string name="storage">Storage</string>
    <string name="message_proof_generating">Generating proof and signatures…</string>
    <string name="message_proof_generated">Successfully generated proof and signatures.</string>
    <string name="message_media_uploaded">Successfully uploaded media via Textile.</string>

    <string name="create_thread">Create Thread</string>
    <string name="thread_name">Thread Name</string>
    <string name="create">Create</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="accept_invite">Accept Invite</string>
    <string name="invite_id">Invite ID</string>
    <string name="invite_key">Invite Key</string>
    <string name="add">Add</string>
    <string name="message_accepting_thread_invite">Accepting thread invitation…</string>
    <string name="message_invite_parsing_error">Failed to parse invitation acceptance.</string>

    <string name="information">Information</string>
    <string name="thread_id">Thread ID</string>
    <string name="thread_key">Thread Key</string>
    <string name="schema">Schema</string>
    <string name="type">Type</string>
    <string name="sharing_mode">Sharing Mode</string>
    <string name="block_count">Block Count</string>
    <string name="head_block_count">Head Block Count</string>
    <string name="peer_count">Peer Count</string>

    <string name="actions">Actions</string>
    <string name="change_name">Change Name</string>
    <string name="new_thread_name">New Thread Name</string>
    <string name="confirm">Confirm</string>
    <string name="storage_information">Storage Information</string>
    <string name="invite_others">Invite Others</string>
    <string name="leave_thread">Leave Thread</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="refresh">Refresh</string>
    <string name="publish">Publish</string>
    <string name="title_leave_thread_confirmation">Leave Thread?</string>
    <string name="title_deletion_confirmation">Delete?</string>
    <string name="title_positive_confirmation">Just do it</string>
    <string name="no">No</string>

    <string name="details">Details</string>
    <string name="media_type">Media Type</string>
    <string name="source_user">Source User</string>
    <string name="block_timestamp">Block Timestamp</string>
    <string name="metadata">Metadata</string>
    <string name="metadata_signature">Metadata Signature</string>
    <string name="media_signature">Media Signature</string>
    <string name="signature_provider">Signature Provider</string>
    <string name="block_hash">Block Hash</string>

    <string name="validation">Validation</string>
    <string name="validation_result">Validation Result</string>
    <string name="sealr">Sealr</string>

    <string name="settings">Settings</string>
    <string name="textile">Textile</string>
    <string name="proofmode">ProofMode</string>
    <string name="info_snapshot">Info Snapshot</string>
    <string name="zion">Zion</string>
    <string name="user_name">User Name</string>
    <string name="wallet_recovery_phrase">Wallet Recovery Phrase</string>
    <string name="personal_thread_id">Personal Thread ID</string>
    <string name="cafes">Cafes</string>
    <string name="proofmode_pgp_password">ProofMode PGP Password</string>
    <string name="proofmode_pgp_public_key">ProofMode PGP Public Key</string>
    <string name="snapshot_duration">Snapshot Duration</string>
    <string name="snapshot_duration_summary">The duration of a single information snapshot in seconds.</string>
    <string name="collect_device_info">Collect Device Info</string>
    <string name="collect_locale_info">Collect Locale Info</string>
    <string name="collect_location_info">Collect Location Info</string>
    <string name="collect_sensor_info">Collect Sensor Info</string>
    <string name="collect_settings_info">Collect Settings Info</string>
    <string name="sign_with_zion">Sign with Zion</string>
    <string name="unsupported_device">Unsupported Device</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>

    <string name="title_permission_rationale">Permission Denied</string>
    <string name="message_proofmode_permissions_rationale">MediAnt requires permissions to save the proof (including GPS info) and signature of the pictures you take into device\'s storage. Go to settings to turn on the permissions of this APP.</string>

    <string name="canon_camera_control_api">Canon Camera Control API</string>
    <string name="connect_canon_camera">Connect to Canon Camera</string>
    <string name="successfully_connect_to_canon_camera">Successfully Connect to Canon Camera</string>
    <string name="polling">Polling</string>
    <string name="open_ccapi_live_view">Open CCAPI Live View</string>

    <string name="session_based_signature">Session-Based Signature</string>
    <string name="session_duration">Session Duration</string>
    <string name="session_duration_summary">How many minutes a session keypair will be valid.</string>
    <string name="message_wait_session_creation">Please wait 10 secs for creating secure session.</string>

    <string name="message_hala_uploaded">Successfully uploaded media via Hala Systems API.</string>
</resources>
