<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/captureImage"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/capture_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/captureVideo"
        android:icon="@drawable/ic_videocam_black_24dp"
        android:title="@string/capture_video"
        app:showAsAction="always" />

    <item
        android:id="@+id/navToSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navToPersonalThreadInformation"
        android:title="@string/storage_information"
        app:showAsAction="never" />

    <item
        android:id="@+id/navToOnboarding"
        android:title="@string/tour"
        app:showAsAction="never" />

    <item
        android:id="@+id/openLiveView"
        android:title="@string/open_ccapi_live_view"
        app:showAsAction="never" />
</menu>