<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/initializationFragment">
    <fragment
        android:id="@+id/initializationFragment"
        android:name="io.numbers.mediant.ui.initialization.InitializationFragment"
        android:label="@string/starling_capture"
        tools:layout="@layout/fragment_initialization">
        <action
            android:id="@+id/action_initializationFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out"
            app:popUpTo="@id/initializationFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_initializationFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out"
            app:popUpTo="@id/initializationFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="io.numbers.mediant.ui.main.MainFragment"
        android:label="@string/starling_capture"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_threadFragment"
            app:destination="@id/threadFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_permissionRationaleFragment"
            app:destination="@id/permissionRationaleFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_publishingFragment"
            app:destination="@id/publishingFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_mediaDetailsFragment"
            app:destination="@id/mediaDetailsFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_preferencesFragment"
            app:destination="@id/preferencesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_mainFragment_to_threadInformationFragment"
            app:destination="@id/threadInformationFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_mainFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@+id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="io.numbers.mediant.ui.settings.PreferencesFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/threadFragment"
        android:name="io.numbers.mediant.ui.main.thread.ThreadFragment"
        android:label="{threadName}"
        tools:layout="@layout/fragment_thread">
        <argument
            android:name="threadId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="threadName"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_threadFragment_to_mediaDetailsFragment"
            app:destination="@id/mediaDetailsFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
        <action
            android:id="@+id/action_threadFragment_to_threadInformationFragment"
            app:destination="@id/threadInformationFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out" />
    </fragment>
    <fragment
        android:id="@+id/permissionRationaleFragment"
        android:name="io.numbers.mediant.ui.permission_rationale.PermissionRationaleFragment"
        android:label="@string/title_permission_rationale"
        tools:layout="@layout/fragment_permission_rationale">
        <argument
            android:name="rationale"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/publishingFragment"
        android:name="io.numbers.mediant.ui.publishing.PublishingFragment"
        android:label="@string/publish"
        tools:layout="@layout/fragment_publishing">
        <argument
            android:name="fileHash"
            app:argType="string" />
        <argument
            android:name="userName"
            app:argType="string" />
        <argument
            android:name="date"
            app:argType="string" />
        <argument
            android:name="dataHash"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mediaDetailsFragment"
        android:name="io.numbers.mediant.ui.media_details.MediaDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_media_details">
        <argument
            android:name="fileHash"
            app:argType="string" />
        <argument
            android:name="userName"
            app:argType="string" />
        <argument
            android:name="blockTimestamp"
            app:argType="string" />
        <argument
            android:name="blockHash"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/threadInformationFragment"
        android:name="io.numbers.mediant.ui.main.thread.thread_information.ThreadInformationFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_thread_information">
        <argument
            android:name="threadId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="io.numbers.mediant.ui.onboarding.OnboardingFragment"
        android:label="@string/starling_capture"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboardingFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@anim/fast_fade_in"
            app:exitAnim="@anim/fast_fade_out"
            app:popEnterAnim="@anim/fast_fade_in"
            app:popExitAnim="@anim/fast_fade_out"
            app:popUpTo="@+id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>